--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Trabalho</title>
         
         <link rel="stylesheet" type="text/css" href="style.css">
-        <script src="script1.js"></script>
+        <script src="script.js"></script>
     </head>
     <body>
         <label for="send" id="sendLabel">SEND: </label>
