--- a/index3.html
+++ b/index3.html
@@ -33,44 +33,75 @@
 
 		</style>
 
-		<title>SudokuJS - simple demo</title>
+		<title>Sudoku</title>
 
 		<script type="text/javascript" src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
 		<script type="text/javascript" src="script3.js"></script>
 	</head>
 
 	<body>
-	<div class="wrap">
-		<h1>Sudoku</h1>
-		<!--the only required html-->
-		<div id="sudoku" class="sudoku-board">
+		<div class="wrap">
+			<h1>Sudoku</h1>
+	
+			New:
+			<button type="button" class="js-generate-board-btn--easy">Easy</button>
+			<button type="button" class="js-generate-board-btn--medium">Medium</button>
+			<button type="button" class="js-generate-board-btn--hard">Hard</button>
+			<button type="button" class="js-generate-board-btn--very-hard">Very Hard</button>
+	
+	
+			<!--the only required html-->
+			<div id="sudoku" class="sudoku-board">
+			</div>
+	
+			<!--solve buttons-->
+			Solve: <button type="button" class="js-solve-step-btn">One Step</button><button type="button" class="js-solve-all-btn">All</button>
+			<br>
 		</div>
 
-		<!--solve buttons-->
-		Solve: <button type="button" class="js-solve-step-btn">One Step</button>
-		<button type="button" class="js-solve-all-btn">All</button>
-	</div>
-
 	<script>
-		var board = [
-			 ,5, , , ,2,3,8,
-			, ,1, , , ,4, , ,5
-			, ,2, , ,5, , , ,
-			,5, ,7,8, , ,2,1,
-			,4,6, ,2,3,7, ,5,8
-			, ,9,8, , ,5,4, ,7
-			, , , , ,6, , ,4,
-			,1, , ,9, , , ,6,
-			, ,7,3,4, , , ,9,undefined
-		]
-		//NOTE: if last cell of board is empty 'undefined' has to be used as value!
+		var	$candidateToggle = $(".js-candidate-toggle"),
+			$generateBoardBtnEasy = $(".js-generate-board-btn--easy"),
+			$generateBoardBtnMedium = $(".js-generate-board-btn--medium"),
+			$generateBoardBtnHard = $(".js-generate-board-btn--hard"),
+			$generateBoardBtnVeryHard = $(".js-generate-board-btn--very-hard"),
 
-		var mySudokuJS = $("#sudoku").sudokuJS({
-			board: board
+			$solveStepBtn = $(".js-solve-step-btn"),
+			$solveAllBtn = $(".js-solve-all-btn"),
+			$clearBoardBtn = $(".js-clear-board-btn"),
+
+			mySudokuJS = $("#sudoku").sudokuJS({
+				difficulty: "very hard"
+				//change state of our candidate showing checkbox on change in sudokuJS
+				,candidateShowToggleFn : function(showing){
+					$candidateToggle.prop("checked", showing);
+				}
+			});
+
+		$solveStepBtn.on("click", mySudokuJS.solveStep);
+		$solveAllBtn.on("click", mySudokuJS.solveAll);
+		$clearBoardBtn.on("click", mySudokuJS.clearBoard);
+
+		$generateBoardBtnEasy.on("click", function(){
+			mySudokuJS.generateBoard("easy");
+		});
+		$generateBoardBtnMedium.on("click", function(){
+			mySudokuJS.generateBoard("medium");
+		});
+		$generateBoardBtnHard.on("click", function(){
+			mySudokuJS.generateBoard("hard");
+		});
+		$generateBoardBtnVeryHard.on("click", function(){
+			mySudokuJS.generateBoard("very hard");
 		});
 
-		$(".js-solve-step-btn").on("click", mySudokuJS.solveStep);
-		$(".js-solve-all-btn").on("click", mySudokuJS.solveAll);
+		$candidateToggle.on("change", function(){
+			if($candidateToggle.is(":checked"))
+				mySudokuJS.showCandidates();
+			else
+				mySudokuJS.hideCandidates();
+		});
+		$candidateToggle.trigger("change");
 	</script>
 	</body>
 </html>
